--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
 
         <activity android:name=".ImageListScreen"/>
 
+
+        <activity
+            android:name=".Main">
+        </activity>
+        <activity
+            android:name=".MultiPhotoSelectActivity" >
+        </activity>
     </application>
 
 </manifest>
