--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.squareup.picasso:picasso:2.4.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-
+    compile files('libs/universal-image-loader-1.9.0.jar')
 }
