--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
-            android:name=".MainActivity"
+            android:theme="@style/AppTheme"
+            android:name=".HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +24,18 @@
 
 
 
+        <activity
+
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+
+
         <activity android:name="CustomGalleryActivity" >
             <intent-filter>
-                <action android:name="luminous.ACTION_PICK" />
-                <action android:name="luminous.ACTION_MULTIPLE_PICK" />
+                <action android:name="com.krishna.invisivault.ACTION_PICK" />
+                <action android:name="com.krishna.invisivault.ACTION_MULTIPLE_PICK" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
